feat: Implement update controller for journal in REST API
